# ericgregory__http-fs-hello

./: .gitignore  Cargo.toml  README.md  hostgroup.yaml  kind-config.yaml  values.local.yaml  workloaddeployment.yaml
.wash/: config.json
samples/: sample.txt
src/: lib.rs  wash_plugin.rs
wit/: world.wit
