[package]
name = "sample-wasi-http-rust"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:sample-wasi-http-rust"
# Using custom world that includes both HTTP and filesystem
target = { path = "wit", world = "http-fs" }

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
wstd = "0.5.4"
wasi = "0.14.0"
